<resources>
    <string name="app_name">BakingApp</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="connection_error">please enable internet connection</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_dec_title">Step Description:</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipes_list">Recipes List</string>
</resources>
